tdf#97108: SwDocShell of clipboard document has no base URL

... which triggers this assert; have to downgrade it to SAL_INFO.

The startsWith("0x") check is obsolete anyway since commit
0f02bc189b6e89ca2e62d4bd6a2f407a9fd4ec3b.

Change-Id: If47bc4496852ff85ba1bbeb4205ffc16be0782de
(cherry picked from commit bd5834005872d005c3129405c6ab2d6d2bdce19d)